# juni-agent

./: .gitignore  .replit  anchor_extractor.py  app.py  compliance_agent.py  compliance_result_john_michael_smith_20250825_210721.json  compliance_result_john_michael_smith_20250825_210754.json  compliance_result_john_michael_smith_20250825_210948.json  compliance_result_john_michael_smith_20250825_211026.json  config.py  decision_engine.py  main.py  models.py  name_matcher.py  package-lock.json  package.json  prompt_manager.py  pyproject.toml  replit.md  utils.py
attached_assets/: Pasted--Adverse-Media-Review-SOP-LLM-Driven-Step-What-the-LLM-must-think-through-Evidence-it-reads-Dec-1756155448950_1756155448952.txt
frontend/: package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: ComplianceForm.tsx  ComplianceResults.tsx
static/: index.html
